<resources>
    <string name="app_name">Project</string>
    <string name="NameDateOfInspection">Inspection Date: </string>
    <string name="DateOfInspection">22-Jan-2020</string>
    <string name="NameInspType">Inspection Type:</string>
    <string name="InspType">Routine</string>
    <string name="NameNumCritical">Number of Critical Issues Found:</string>
    <string name="NumCritical">0</string>
    <string name="NameNumNonCritical">Number of Non-Critical Issues Found:</string>
    <string name="NumNonCritical">0</string>
    <string name="NameHazard">Hazard Level:</string>
    <string name="Hazard">Moderate</string>
    <string name="ViolationName">violation</string>
    <string name="emptyStatus">No Violation!</string>
    <string name="inspectionTitleName">Violations of Inspection</string>

    <string name="violation101">Building not in accordance with the Regulation.</string>
    <string name="violation102">Operation of an unapproved food premises.</string>
    <string name="violation103">Failure to hold a valid permit.</string>
    <string name="violation104">Permit not posted in a conspicuous location.</string>
    <string name="violation201">Food contaminated or unfit for human consumption.</string>
    <string name="violation202">Food not processed in a safe way.</string>
    <string name="violation203">Food not cooled in an acceptable manner.</string>
    <string name="violation204">Food not cooked or reheated in a safe way.</string>
    <string name="violation205">Cold potentially hazardous food stored above 4 °C.</string>
    <string name="violation206">Hot potentially hazardous food stored below 60 °C.</string>
    <string name="violation208">Foods obtained from unapproved sources.</string>
    <string name="violation209">Food not protected from contamination.</string>
    <string name="violation210">Food not thawed in an acceptable manner.</string>
    <string name="violation211">Frozen potentially food stored above -18 °C.</string>
    <string name="violation212">Operator has not provided acceptable food handling.</string>
    <string name="violation301">The surfaces not maintained in sanitary condition.</string>
    <string name="violation302">The surfaces not properly washed and sanitized.</string>
    <string name="violation303">The sanitary maintenance not adequate.</string>
    <string name="violation304">Premises not free of pests.</string>
    <string name="violation305">May allow entrance/harbouring/breeding of pests.</string>
    <string name="violation306">Food premises not maintained in a sanitary condition.</string>
    <string name="violation307">The surfaces are not of suitable design/material.</string>
    <string name="violation308">The surfaces are not in good working order.</string>
    <string name="violation309">Chemicals cleansers stored or labeled improperly.</string>
    <string name="violation310">Single use containers are used more than once.</string>
    <string name="violation311">Premises not maintained as per approved plans.</string>
    <string name="violation312">Unwanted items are stored at food premises.</string>
    <string name="violation313">Live animal on the premises.</string>
    <string name="violation314">Operator has not provided acceptable procedures.</string>
    <string name="violation315">Equipments lack accurate thermometers.</string>
    <string name="violation401">No enough handwashing stations for employees.</string>
    <string name="violation402">Employee does not wash hands properly.</string>
    <string name="violation403">Employee lacks good personal hygiene.</string>
    <string name="violation404">Employee smoking in food preparation.</string>
    <string name="violation501">Operator does not have FOODSAFE Level 1.</string>
    <string name="violation502">In operator’s absence no staff has FOODSAFE Level 1.</string>
    <string name="name1">Name</string>

    <string name="all_restaurantTextView">All Restaurants</string>
    <string name="restaurantName">restaurantName</string>
    <string name="name2">Name</string>
    <string name="restaurantNameSingleRestaurant">restaurantName</string>
    <string name="restaurantAddress">12808 King George Blvd, Surrey</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="title_activity_restaurant">Restaurant Detail</string>
    <string name="single_restaurant_hazard_icon">single_restaurant_hazard_icon</string>
    <string name="num_of_critical_found"># critical issues found: </string>
    <string name="num_of_noncritical_found"># non-critical issues found: </string>
    <string name="last_inspection">Last inspection: </string>

    <string name="restaurantAddressTextView">TextView</string>
    <string name="numberOfIssuesFound">TextView</string>
    <string name="hazardLevel">TextView</string>
    <string name="lastDateInspection">TextView</string>
    <string name="ProjectTitle">Restaurant App</string>
    <string name="InspectionTitle">Inspection</string>
    <string name="food_premises_not_maintained_in_a_sanitary_condition">Food premises not maintained in a sanitary condition.</string>
    <string name="not_critical">Not Critical</string>

    <string name="update_popup">Update</string>
    <string name="ignore_popup">Ignore</string>
    <string name="update_available">Update Available</string>
    <string name="image_download">image download</string>

    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>

    <string name="cancel">Cancel</string>
    <string name="downloadFailed">Failed to download</string>

    <string name="title_activity_maps2">Map</string>
    <string name="restaurant">Restaurants</string>

    <string name="hazard_level">Select Hazard Level of Restaurant:</string>
    <string name="critical_violation">Number of Critical Violations in Last Year:</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="larger_than">&gt;=:</string>
    <string name="input_critical_violation"># of Critical Violations</string>
    <string name="less_than">&lt;=:</string>
    <string name="favourite_text">Only Include ‘Favourite’ Restaurants:</string>
    <string name="reset_button">reset</string>
    <string name="search_button">Search</string>



    <string name="numOfIssuesFound_Main"> issues found</string>
    <string name="latest_inspection_Main">latest inspection: </string>
    <string name="daysAgo"> days ago</string>
    <string name="unKnown_Main">Unknown</string>
    <string name="noInspection_Main">No Inspections</string>
    <string name="noIssues_Main">0 issues found</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="search_menu">search_menu</string>


</resources>
