<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleInspection">

    <TextView
        android:id="@+id/textViewDateN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/NameDateOfInspection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewtypeN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/NameInspType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateN" />

    <TextView
        android:id="@+id/textViewNumCriticalN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/NameNumCritical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtypeN" />

    <TextView
        android:id="@+id/textViewNumNonCriN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/NameNumNonCritical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumCriticalN" />

    <TextView
        android:id="@+id/textViewHazardLevelN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/NameHazard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCriN" />

    <ListView
        android:id="@+id/ListView"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="16dp"
        android:text="@string/DateOfInspection"
        app:layout_constraintStart_toEndOf="@+id/textViewDateN"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:text="@string/InspType"
        app:layout_constraintStart_toEndOf="@+id/textViewtypeN"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textViewNumCritical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/NumCritical"
        app:layout_constraintStart_toEndOf="@+id/textViewNumCriticalN"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <TextView
        android:id="@+id/textViewNumNonCr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/NumNonCritical"
        app:layout_constraintStart_toEndOf="@+id/textViewNumNonCriN"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumCritical" />

    <TextView
        android:id="@+id/textViewHazardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@android:drawable/radiobutton_off_background"
        android:text="@string/Hazard"
        android:textColor="#FFC107"
        app:layout_constraintStart_toEndOf="@+id/textViewHazardLevelN"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCr" />
</androidx.constraintlayout.widget.ConstraintLayout>