<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_New_Inspection_hazard_icon"
            android:layout_width="73dp"
            android:layout_height="60dp"
            android:layout_marginStart="4.5dp"
            android:layout_marginTop="4.5dp"
            android:contentDescription="@string/single_restaurant_hazard_icon"
            android:padding="2.5dp" />

        <TextView
            android:id="@+id/text_view_hazard_New_Inspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_New_Inspection_hazard_icon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="14dp"
            android:text="@string/hazardLevel"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView_New_Inspection_ResName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageView_New_Inspection_hazard_icon"
            android:text="@string/restaurant_name"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_New_Inspection_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_New_Inspection_ResName"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageView_New_Inspection_hazard_icon"
            android:text="@string/DateOfInspection"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewFavouriteNewInspection"
            android:layout_width="73dp"
            android:layout_height="40dp"

            android:layout_alignParentEnd="true"
            android:layout_marginStart="77dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="27dp"
            android:layout_toEndOf="@+id/textView_New_Inspection_Date"
            app:srcCompat="@android:drawable/btn_star_big_on" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>