<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SearchActivity">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/textViewHazardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hazard_level"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:text="Button" />

    <Button
        android:id="@+id/buttonOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/buttonGreen"
        android:layout_centerHorizontal="true"
        android:text="Button" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:text="Button" />

    <TextView
        android:id="@+id/textViewCriticalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="190dp"
        android:text="@string/critical_violation"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewLager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:text="@string/larger_than"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewSmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:text="@string/less_than"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextLager"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:ems="10"
        android:layout_marginTop="210dp"
        android:layout_alignBottom="@id/textViewLager"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:text="Name" />

    <EditText
        android:id="@+id/editTextTextLess"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:ems="10"
        android:layout_marginTop="240dp"
        android:layout_alignBottom="@id/textViewSmaller"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:text="Name" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="340dp"
        android:text="Button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:text="Button" />


</RelativeLayout>